test/cases/parser/DottedTypeErr.errors
DottedTypeErr.b:5:15: Syntax error (expected type name)
